Minor fix for link styles on Firefox

--- a/app/assets/sass/patterns/_global.scss
+++ b/app/assets/sass/patterns/_global.scss
@@ -53,6 +53,10 @@ html {
   -ms-text-size-adjust: 100%;
 }
 
+a {
+  color:#000;
+}
+
 p {
   margin:0px;
 }
