--- a/public/stylesheets/unbranded-ie8.css
+++ b/public/stylesheets/unbranded-ie8.css
@@ -5073,6 +5073,10 @@ html {
   -ms-text-size-adjust: 100%;
 }
 
+a {
+  color: #000;
+}
+
 p {
   margin: 0px;
 }
