--- a/public/stylesheets/unbranded.css
+++ b/public/stylesheets/unbranded.css
@@ -7858,6 +7858,10 @@ html {
   -ms-text-size-adjust: 100%;
 }
 
+a {
+  color: #000;
+}
+
 p {
   margin: 0px;
 }
